# vanadium

./: .gitignore  .gitmodules  BENCHMARKS.md  BENCHMARKS_COLOR_COLD.md  BENCHMARKS_COLOR_WARM.md  BENCHMARKS_CONVERT_COLD.md  BENCHMARKS_CONVERT_WARM.md  BENCHMARKS_PCA_COLD.md  BENCHMARKS_PCA_WARM.md  Cargo.toml  README.md  benchmark.sh  drop.sh  siproc-benchmark.sh
.cargo/: config.toml
.github/workflows/: ci.yml  coverage.yml
benchmark-results/laptop/siproc/small/: BENCHMARKS_CONVERT_WARM.md  BENCHMARKS_PCA_WARM.md
benchmark-results/laptop/spectral/small/: BENCHMARKS_CONVERT_WARM.md  BENCHMARKS_PCA_WARM.md
benchmark-results/spectral/medium/: BENCHMARKS_PCA_COLD.md  BENCHMARKS_PCA_WARM.md
benchmark-results/spectral/small/: BENCHMARKS_CONVERT_COLD.md  BENCHMARKS_PCA_WARM.md
benchmark-results/workstation/siproc/medium/: BENCHMARKS_CONVERT_WARM.md  BENCHMARKS_PCA_WARM.md
benchmark-results/workstation/siproc/small/: BENCHMARKS_CONVERT_WARM.md
benchmark-results/workstation/spectral/medium/: BENCHMARKS_CONVERT_COLD.md  BENCHMARKS_CONVERT_WARM.md  BENCHMARKS_PCA_COLD.md  BENCHMARKS_PCA_WARM.md
benchmark-results/workstation/spectral/small/: BENCHMARKS_CONVERT_WARM.md  BENCHMARKS_PCA_COLD.md
envi-header/: Cargo.toml
envi-header/src/: lib.rs
envi-image/: Cargo.toml
envi-image/src/: buffer.rs  error.rs  lib.rs  mat.rs  stat.rs  traits.rs
envi-image/src/indexing/: bil.rs  bip.rs  bsq.rs  mod.rs
envi-image/src/transforms/: conversion.rs  mod.rs  pca.rs  render.rs  stat.rs
envi-mapped-image/: Cargo.toml
envi-mapped-image/src/: buffer.rs  error.rs  lib.rs  mat.rs
envi-mapped-image/src/transforms/: conversion.rs  pca.rs  render.rs  stat.rs
envi-util/: Cargo.toml
envi-util/src/: lib.rs
hyperspectra/: Cargo.toml
hyperspectra-cli/: Cargo.toml
hyperspectra-cli/src/: cli.rs  convert.rs  main.rs  pca.rs  render.rs
hyperspectra/src/: cli.rs  convert.rs  header.rs  lib.rs  pca.rs  render.rs
hyperspectra/src/container/: convert.rs  mod.rs  pca.rs  render.rs  stat.rs
hyperspectra/src/container/mapped/: bip.rs  mod.rs
hyperspectra/src/container/mapped/bip/: bip_iter.rs  bip_iter_mut.rs  mod.rs
hyperspectra/src/container/mapped/bsq/: bsq_iter.rs  bsq_iter_mut.rs  mod.rs
hyperspectra/src/container/stat/: mod.rs  tests.rs
hyperspectra/src/operations/: mod.rs
hyperspectral/: Cargo.toml
hyperspectral/src/: convert.rs  main.rs  pca.rs  render.rs  tests.rs
hyperspectral/src/bin_formats/: file_buffer.rs
hyperspectral/src/bin_formats/mat/: mod.rs  pca.rs
hyperspectral/src/tests/: mat_tests.rs
old-benchmark-results/laptop/siproc/small/: BENCHMARKS_CONVERT_COLD.md  BENCHMARKS_PCA_COLD.md
old-benchmark-results/laptop/spectral/small/: BENCHMARKS_CONVERT_COLD.md  BENCHMARKS_PCA_COLD.md
old-benchmark-results/workstation/siproc/medium/: BENCHMARKS_CONVERT_COLD.md  BENCHMARKS_PCA_COLD.md
old-benchmark-results/workstation/siproc/small/: BENCHMARKS_CONVERT_COLD.md  BENCHMARKS_CONVERT_WARM.md  BENCHMARKS_PCA_COLD.md  BENCHMARKS_PCA_WARM.md
old-benchmark-results/workstation/spectral/small/: BENCHMARKS_PCA_WARM.md
parser/: envi-header.pest
python/: optir_proc.py  optir_utils.py
rust/: Cargo.toml
rust/src/: cli.rs  file_alloc.rs  lib.rs  main.rs  transforms.rs
rust/src/bin_formats/: bip.rs  bsq.rs  mod.rs  traits.rs
rust/src/headers/: envi.rs  mod.rs
scripts/: drop.sh
src/: cli.rs  convert.rs  headers.rs  main.rs  norm.rs  opt.rs  pca.rs  render.rs  tests.rs  util.rs
src/bin_formats/: bil.rs  bip.rs  bsq.rs  error.rs  file_buffer.rs  mat.rs  mod.rs
src/bin_formats/mat/: color_maps.rs  conversion.rs  mod.rs  pca.rs  render.rs  stat.rs
src/headers/: mod.rs
src/image_formats/: bip.rs  bsq.rs  mod.rs
src/io/: bip.rs  mod.rs
src/io/glommio/: bip.rs
src/io/mapped/: bip.rs
src/io/syscall/: bip.rs
src/io/tokio/: bip.rs
src/tests/: covariances.rs  crop.rs  mat_tests.rs  means.rs  mod.rs  std_devs.rs
vanadium-benches/: Cargo.toml
vanadium-benches/src/: lib.rs
vanadium-cli/: Cargo.toml
vanadium-cli/src/: cli.rs  convert.rs  main.rs  opt.rs  pca.rs  render.rs
vanadium-core/: Cargo.toml
vanadium-core/src/: bar.rs  error.rs  header.rs  headers.rs  lib.rs  util.rs
vanadium-core/src/backends/: mod.rs  sync_syscall.rs
vanadium-core/src/backends/glommio/: bip.rs
vanadium-core/src/backends/sync_syscall/: bip.rs  bsq.rs  mod.rs
vanadium-core/src/backends/tokio_uring/: bip.rs  mod.rs
vanadium-core/src/container/: pca.rs  render.rs
vanadium-core/src/container/mapped/bip/: bip_iter.rs  bip_iter_mut.rs  mod.rs
vanadium-core/src/container/mapped/bsq/: bsq_iter.rs  mod.rs
vanadium-core/src/container/stat/: tests.rs
vanadium-core/src/image_formats/: bip.rs  bsq.rs  mod.rs
vanadium-core/src/io/: bip.rs  mod.rs
vanadium-core/src/io/glommio/: bip.rs
vanadium-core/src/io/mapped/: bip.rs
vanadium-core/src/io/syscall/: bip.rs
vanadium-core/src/specialization/: bip.rs  bsq.rs
vanadium-io/: Cargo.toml
vanadium-io/src/: bip.rs  lib.rs
vanadium-io/src/glommio/: bip.rs
vanadium-io/src/sync_syscall/: bip.rs  bsq.rs
vanadium-io/src/syscall/: bip.rs  bsq.rs
vanadium-io/src/tokio_uring/: bip.rs
