[package]
name = "hyperspectra-cli"
version = "0.4.0"
authors = ["noah <nomaxx117@gmail.com>"]
edition = "2018"

[dependencies.hyperspectra]
path = "../hyperspectra"

[dependencies.structopt]
version = "0.3.21"
default-features = false

[dependencies.image]
version = "0.23.12"
default-features = false
features = ["png"]