[package]
name = "hyperspectra"
version = "1.0.0-alpha"
authors = ["noah <nomaxx117@gmail.com>"]
edition = "2018"

[features]

[dependencies]
memmap2 = "0.2.0"
rayon = "1.5"
nalgebra = "0.24.0"
num = "0.3.1"

[dependencies.indicatif]
version = "0.15.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.regex]
version = "1.4"
default-features = false
features = ["std"]