[package]
name = "hyperspectra"
version = "1.0.0-alpha"
authors = ["noah <nomaxx117@gmail.com>"]
edition = "2018"

[features]
header-serialization = ["serde"]

[dependencies]
either = "1.6"
memmap2 = "0.2.0"
rayon = "1.5"
nalgebra = "0.24.0"
parking_lot = "0.11.1"

[dependencies.num]
version = "0.3.1"
default-features = false

[dependencies.image]
version = "0.23.12"
default-features = false
features = ["png"]

[dependencies.indicatif]
version = "0.15.0"
features = ["improved_unicode"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.regex]
version = "1.4"
default-features = false
features = ["std"]