[package]
name = "hyperspectral"
version = "0.3.0"
authors = ["noah <nomaxx117@gmail.com>"]
edition = "2018"

[dependencies.envi-header]
path = "../envi-header"

[dependencies.envi-image]
path = "../envi-image"

[dependencies.structopt]
version = "0.3.21"
default-features = false

[dependencies.image]
version = "0.23.12"
default-features = false
features = ["png"]