[package]
name = "vanadium-benches"
version = "0.1.0"
edition = "2018"

[dependencies]

[dependencies.vanadium-core]
path = "../vanadium-core"
features = ["glommio-support"]

[dependencies.ndarray]
version = "^0.15.3"
features = ["blas", "matrixmultiply-threading"]

[dependencies.blas-src]
version = "^0.8.0"
features = ["openblas"]

#[dependencies.openblas-src]
#version = "^0.10.4"
#default-features = false
#features = ["cblas", "system"]