[package]
name = "vanadium-benches"
version = "0.1.0"
edition = "2018"

[dependencies]
tcmalloc = "^0.3.0"

[dependencies.vanadium-core]
path = "../vanadium-core"

[dependencies.vanadium-io]
path = "../vanadium-io"
features = ["progress", "glommio-backend", "syscall-backend"]

[dependencies.blas-src]
version = "^0.8.0"
features = ["openblas"]

[dependencies.openblas-src]
version = "^0.10.4"
default-features = false
features = ["cblas", "system"]