[package]
name = "vanadium-cli"
version = "0.1.0"
edition = "2018"

[features]
openblas = ["blas-src/openblas", "openblas-src", "ndarray/blas"]
netlib = ["blas-src/netlib", "netlib-src", "ndarray/blas"]

[dependencies]
structopt = "^0.3.0"
serde_json = "^1.0.0"

[dependencies.vanadium-core]
path = "../vanadium-core"
features = ["serde", "glommio-backend", "syscall-backend", "progress", "memmap2"]

[dependencies.ndarray]
version = "^0.15.0"
features = ["serde"]

[dependencies.blas-src]
version = "^0.8.0"
optional = true

[dependencies.openblas-src]
version = "^0.10.0"
features = ["cblas", "system"]
optional = true

[dependencies.netlib-src]
version = "^0.8.0"
features = ["cblas", "system"]
optional = true