[package]
name = "vanadium-core"
version = "0.1.0"
edition = "2018"

###################################################################################################
# Features
###################################################################################################
[features]
header-parsing = ["serde"]

###################################################################################################
# Dependencies
###################################################################################################
[dependencies]
num-traits = "^0.2.14"
cfg-if = "^1.0.0"
thiserror = "^1.0.0"

[dependencies.ndarray]
version = "^0.15.3"

###################################################################################################
# Not always needed for libraries
###################################################################################################
[dependencies.serde]
version = "^1.0.0"
features = ["derive"]
optional = true