[package]
name = "vanadium-core"
version = "0.1.0"
edition = "2018"

###################################################################################################
# Features
###################################################################################################
[features]
header-parsing = ["serde"]
progress = ["indicatif"]
glommio-backend = ["glommio", "futures"]
syscall-backend = []

###################################################################################################
# Dependencies
###################################################################################################
[dependencies]
num-traits = "^0.2.14"
cfg-if = "^1.0.0"
thiserror = "^1.0.0"
ndarray = "^0.15.3"
byteorder = "^1.4.3"
ndarray-linalg = "^0.14.0"

###################################################################################################
# Not always needed for libraries
###################################################################################################
[dependencies.serde]
version = "^1.0.0"
features = ["derive"]
optional = true

[dependencies.indicatif]
version = "^0.16.2"
optional = true

[dependencies.glommio]
version = "^0.5.0"
optional = true

[dependencies.futures]
version = "^0.3.16"
optional = true